--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,9 @@
     "inlineSources": true,
     "strict": true,
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "skipLibCheck": true
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "src/**/*.test.ts"]
+  "exclude": ["node_modules/", "src/**/*.test.ts"]
 }
