--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "types:check": "tsc --noEmit"
   },
   "dependencies": {
-    "@koa/cors": "3.0.0",
     "@typegoose/typegoose": "6.1.7",
     "agenda": "2.3.0",
     "class-transformer": "0.3.1",
@@ -29,11 +28,7 @@
     "http-status-codes": "1.4.0",
     "inversify": "5.0.1",
     "inversify-agenda": "1.1.0",
-    "inversify-koa-utils": "1.0.0",
-    "koa": "2.11.0",
-    "koa-bodyparser": "4.2.1",
-    "koa-helmet": "5.2.0",
-    "koa-router": "7.4.0",
+    "js-yaml": "^4.1.0",
     "mongoose": "6.0.4",
     "reflect-metadata": "0.1.13",
     "socket.io": "^4.2.0",
@@ -46,11 +41,7 @@
     "@types/convict": "^6.1.1",
     "@types/convict-format-with-validator": "^6.0.2",
     "@types/jest": "24.0.23",
-    "@types/koa": "2.11.0",
-    "@types/koa-bodyparser": "4.3.0",
-    "@types/koa-helmet": "3.1.2",
-    "@types/koa-router": "7.0.42",
-    "@types/koa__cors": "2.2.3",
+    "@types/js-yaml": "^4.0.3",
     "@types/mongoose": "5.5.34",
     "@types/supertest": "2.0.8",
     "@types/uuid": "3.4.6",
@@ -71,7 +62,7 @@
     "supertest": "4.0.2",
     "ts-jest": "24.2.0",
     "tsc-watch": "4.0.0",
-    "typescript": "3.7.3"
+    "typescript": "4.4.3"
   },
   "husky": {
     "hooks": {
