feat: add generic repo
Added a generic repository setup with basic CRUD methods, which can be
extended per domain (i.e. room). Setup using typegoose, which can be
extended by each domain specific repository. This means we have less
boilerplate code, moving forwards and should make it easier to change
different components of the application later.

Fixes: #5

--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "scripts": {
     "start:prod": "node dist/index.js",
     "start": "tsc-watch --noClear --onSuccess 'node -r dotenv/config dist/index.js'",
-    "build": "rimraf dist && tsc",
-    "clean": "rimraf dist coverage node_modules yarn-error.log mongo-config.tmp",
     "test": "jest",
     "test:coverage": "jest --detectOpenHandles --forceExit --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "lint": "eslint \"src/**/*.{ts,js}\"",
@@ -16,56 +14,39 @@
     "types:check": "tsc --noEmit"
   },
   "dependencies": {
-    "@typegoose/typegoose": "6.1.7",
-    "agenda": "2.3.0",
-    "class-transformer": "0.3.1",
-    "class-validator": "0.13.0",
+    "@typegoose/typegoose": "^9.1.0",
     "convict": "^5.2.1",
     "convict-format-with-validator": "^6.2.0",
-    "db-migrate": "^0.11.12",
-    "db-migrate-mongodb": "1.5.0",
-    "event-dispatch": "0.4.1",
-    "http-status-codes": "1.4.0",
-    "inversify": "5.0.1",
-    "inversify-agenda": "1.1.0",
     "js-yaml": "^4.1.0",
-    "module-alias": "^2.2.2",
-    "mongoose": "6.0.4",
-    "pino": "^7.0.0-rc.8",
-    "reflect-metadata": "0.1.13",
-    "socket.io": "^4.2.0",
-    "uuid": "3.3.3",
-    "winston": "3.2.1",
-    "yaml": "^1.10.2"
+    "mongoose": "^6.0.11",
+    "pino": "^7.0.2",
+    "socket.io": "^4.3.0"
   },
   "devDependencies": {
-    "@types/agenda": "2.0.6",
     "@types/convict": "^6.1.1",
     "@types/convict-format-with-validator": "^6.0.2",
-    "@types/jest": "24.0.23",
+    "@types/jest": "^27.0.2",
     "@types/js-yaml": "^4.0.3",
-    "@types/mongoose": "5.5.34",
-    "@types/supertest": "2.0.8",
-    "@types/uuid": "3.4.6",
-    "@typescript-eslint/eslint-plugin": "2.11.0",
-    "@typescript-eslint/parser": "2.11.0",
-    "coveralls": "3.0.9",
-    "dotenv": "8.2.0",
-    "eslint": "6.7.2",
-    "eslint-config-airbnb-base": "14.0.0",
+    "@types/node": "^16.11.0",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "db-migrate": "^1.0.0-beta.16",
+    "db-migrate-mongodb": "1.5.0",
+    "dotenv": "^10.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "6.7.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-prettier": "3.1.2",
     "husky": "3.1.0",
-    "jest": "24.9.0",
+    "jest": "^27.2.4",
     "lint-staged": "^11.0.1",
+    "module-alias": "^2.2.2",
     "prettier": "1.19.1",
-    "rimraf": "3.0.0",
-    "supertest": "4.0.2",
-    "ts-jest": "24.2.0",
-    "tsc-watch": "4.0.0",
-    "typescript": "4.4.3"
+    "ts-jest": "^27.0.5",
+    "tsc-watch": "^4.5.0",
+    "typescript": "^4.4.4"
   },
   "husky": {
     "hooks": {
