fix: docker images
Fix the Docker images so they build with this new project. A dev for
local development with a hot realoder. Then a slim image for production.

Fixes: #7

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,8 +36,8 @@ install:dependencies:
 
 publish-docker:test:
   stage: pre
-  only:
-    - main
+  # only:
+  #   - main
   image: docker
   services:
     - docker:dind
