--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,11 @@ services:
     container_name: banter-bus-core-api
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     ports:
       - 8080:8080
     volumes:
-      - ${PWD}/src/:/src
+      - ${PWD}/src:/app/
     depends_on:
       - database
       - redis
