--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "start:prod": "node dist/index.js",
     "start": "tsc-watch --noClear --onSuccess 'node -r dotenv/config dist/index.js'",
+    "build": "tsc",
+    "dev": "nodemon -L src/index.ts",
     "test": "jest",
     "test:coverage": "jest --detectOpenHandles --forceExit --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "lint": "eslint \"src/**/*.{ts,js}\"",
@@ -43,8 +45,10 @@
     "jest": "^27.2.4",
     "lint-staged": "^11.0.1",
     "module-alias": "^2.2.2",
+    "nodemon": "^2.0.13",
     "prettier": "1.19.1",
     "ts-jest": "^27.0.5",
+    "ts-node": "^10.3.0",
     "tsc-watch": "^4.5.0",
     "typescript": "^4.4.4"
   },
