--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint:fix": "eslint --fix './src/**/*.{js,ts}'",
     "format": "prettier --write \"src/**/*.{ts,js}\"",
     "format:check": "prettier --check \"src/**/*.{ts,js}\"",
-    "types:check": "tsc --noEmit"
+    "types:check": "tsc --noEmit",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@typegoose/typegoose": "^9.1.0",
@@ -30,23 +31,23 @@
     "@types/jest": "^27.0.2",
     "@types/js-yaml": "^4.0.3",
     "@types/node": "^16.11.0",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "db-migrate": "^1.0.0-beta.16",
-    "db-migrate-mongodb": "1.5.0",
+    "db-migrate-mongodb": "^1.5.0",
     "dotenv": "^10.0.0",
-    "eslint": "^7.32.0",
+    "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "6.7.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-prettier": "3.1.2",
-    "husky": "3.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.0",
     "jest": "^27.2.4",
     "lint-staged": "^11.0.1",
     "module-alias": "^2.2.2",
     "nodemon": "^2.0.13",
-    "prettier": "1.19.1",
+    "prettier": "^2.4.1",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.3.0",
     "tsc-watch": "^4.5.0",
