--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,6 @@ dist
 
 # End of https://www.toptal.com/developers/gitignore/api/node,linux
 config.yml
+.temp-config
+.devcontainer/config.sh
+.devcontainer/devcontainer.json
