--- a/package.json
+++ b/package.json
@@ -16,19 +16,23 @@
   },
   "dependencies": {
     "@typegoose/typegoose": "^9.1.0",
+    "axios": "^0.23.0",
     "convict": "^5.2.1",
     "convict-format-with-validator": "^6.2.0",
     "js-yaml": "^4.1.0",
     "mongoose": "^6.0.11",
     "pino": "^7.0.2",
-    "socket.io": "^4.3.0"
+    "socket.io": "^4.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/convict": "^6.1.1",
     "@types/convict-format-with-validator": "^6.0.2",
     "@types/jest": "^27.0.2",
     "@types/js-yaml": "^4.0.3",
     "@types/node": "^16.11.0",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "db-migrate": "^1.0.0-beta.16",
