--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     }
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules/", "src/**/*.test.ts"]
+  "exclude": ["node_modules/", "src/**/*.test.ts", "src/clients/**/*"]
 }
