feat: add room controller
Added room controller class, which will receive events from the socket
and then process them as needed. Also updated convict to use typescript
`ts-convict` define our config as interface.

Fixes: #12, #13

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "js-yaml": "^4.1.0",
     "mongoose": "^6.0.11",
     "pino": "^7.0.2",
+    "reflect-metadata": "^0.1.13",
     "socket.io": "^4.3.0",
+    "ts-convict": "^1.1.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
