--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
       "~/*": ["src/*"]
     }
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/core/config/types.d.ts"],
   "exclude": ["node_modules/", "src/**/*.test.ts", "src/clients/**/*"]
 }
