--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,7 +87,21 @@ test:
   only:
     - merge_request
   script:
-    - npm run test -- --passWithNoTests
+    - npm run test
+
+coverage:
+  stage: test
+  only:
+    - main
+    - merge_request
+  script:
+    - npm run coverage
+  coverage: /All files[^|]*\|[^|]*\s+([\d\.]+)/
+  artifacts:
+    when: always
+    reports:
+      junit: junit.xml
+      cobertura: cobertura-coverage.xml
 
 trigger:e2e:tests:
   stage: post
