--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "tsc",
     "dev": "nodemon -L src/index.ts",
     "test": "jest",
-    "test:coverage": "jest --detectOpenHandles --forceExit --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
+    "coverage": "jest --config --collectCoverage --coverageDirectory=\"./coverage\" --ci --reporters=default --reporters=jest-junit --watchAll=false",
     "lint": "eslint \"src/**/*.{ts,js}\"",
     "lint:fix": "eslint --fix './src/**/*.{js,ts}'",
     "format": "prettier --write \"src/**/*.{ts,js}\"",
@@ -19,6 +19,7 @@
     "axios": "^0.23.0",
     "convict": "^5.2.1",
     "convict-format-with-validator": "^6.2.0",
+    "http-status-codes": "^2.1.4",
     "js-yaml": "^4.1.0",
     "mongoose": "^6.0.11",
     "pino": "^7.0.2",
@@ -48,11 +49,14 @@
     "eslint-plugin-import": "^2.25.2",
     "husky": "^7.0.0",
     "jest": "^27.2.4",
+    "jest-junit": "^13.0.0",
     "lint-staged": "^11.0.1",
     "module-alias": "^2.2.2",
+    "mongodb-memory-server": "^7.4.4",
     "nodemon": "^2.0.13",
     "prettier": "^2.4.1",
-    "ts-jest": "^27.0.5",
+    "socket.io-mock": "^1.3.2",
+    "ts-jest": "^27.0.7",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
   },
@@ -69,5 +73,10 @@
   },
   "_moduleAliases": {
     "~": "dist/src"
+  },
+  "config": {
+    "mongodbMemoryServer": {
+      "version": "4.4.4"
+    }
   }
 }
