fix: prod docker image
Fix production Docker image to it actually builds a working container.

Fixes: #23

--- a/config.example.yml
+++ b/config.example.yml
@@ -1,10 +1,10 @@
 app:
-  logLevel: DEBUG
+  logLevel: debug
   environment: development
 database:
   host: banter-bus-database
   port: 27017
-  user: banterbus
+  username: banterbus
   password: banterbus
   name: banterbus
   authDB: admin
