--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon -L src/index.ts",
+    "dev": "nodemon",
+    "start": "ts-node src/index.ts",
     "test": "jest",
     "coverage": "jest --config --collectCoverage --coverageDirectory=\"./coverage\" --ci --reporters=default --reporters=jest-junit --watchAll=false",
     "lint": "eslint \"src/**/*.{ts,js}\"",
@@ -21,6 +22,7 @@
     "convict-format-with-validator": "^6.2.0",
     "http-status-codes": "^2.1.4",
     "js-yaml": "^4.1.0",
+    "module-alias": "^2.2.2",
     "mongoose": "^6.0.11",
     "pino": "^7.0.2",
     "reflect-metadata": "^0.1.13",
@@ -51,9 +53,8 @@
     "jest": "^27.2.4",
     "jest-junit": "^13.0.0",
     "lint-staged": "^11.0.1",
-    "module-alias": "^2.2.2",
     "mongodb-memory-server": "^7.4.4",
-    "nodemon": "^2.0.13",
+    "nodemon": "^2.0.14",
     "prettier": "^2.4.1",
     "socket.io-mock": "^1.3.2",
     "ts-jest": "^27.0.7",
@@ -72,7 +73,7 @@
     ]
   },
   "_moduleAliases": {
-    "~": "dist/src"
+    "~": "dist"
   },
   "config": {
     "mongodbMemoryServer": {
