--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
   "dependencies": {
     "@typegoose/typegoose": "^9.1.0",
     "axios": "^0.23.0",
+    "bunyan": "^1.8.15",
     "convict": "^5.2.1",
     "convict-format-with-validator": "^6.2.0",
     "http-status-codes": "^2.1.4",
     "js-yaml": "^4.1.0",
     "module-alias": "^2.2.2",
     "mongoose": "^6.0.11",
-    "pino": "^7.0.2",
     "reflect-metadata": "^0.1.13",
     "socket.io": "^4.3.0",
     "socket.io-client": "^4.3.2",
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^2.0.4",
     "@types/axios": "^0.14.0",
+    "@types/bunyan": "^1.8.7",
     "@types/convict": "^6.1.1",
     "@types/convict-format-with-validator": "^6.0.2",
     "@types/jest": "^27.0.2",
@@ -56,6 +57,7 @@
     "lint-staged": "^11.0.1",
     "mongodb-memory-server": "^7.4.4",
     "nodemon": "^2.0.14",
+    "pino-pretty": "^7.1.0",
     "prettier": "^2.4.1",
     "socket.io-mock": "^1.3.2",
     "ts-jest": "^27.0.7",
