--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/bunyan": "^1.8.7",
     "@types/convict": "^6.1.1",
     "@types/convict-format-with-validator": "^6.0.2",
+    "@types/faker": "^5.5.9",
     "@types/jest": "^27.0.2",
     "@types/js-yaml": "^4.0.3",
     "@types/node": "^16.11.0",
@@ -51,6 +52,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.2",
+    "faker": "^5.5.3",
+    "fishery": "^2.0.0",
     "husky": "^7.0.0",
     "jest": "^27.2.4",
     "jest-junit": "^13.0.0",
