--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
   },
   "dependencies": {
     "@typegoose/typegoose": "^9.1.0",
-    "axios": "^0.23.0",
+    "axios": "^0.24.0",
     "bunyan": "^1.8.15",
     "convict": "^5.2.1",
     "convict-format-with-validator": "^6.2.0",
     "http-status-codes": "^2.1.4",
+    "inversify": "^6.0.1",
     "js-yaml": "^4.1.0",
     "module-alias": "^2.2.2",
     "mongoose": "^6.0.11",
@@ -60,7 +61,6 @@
     "lint-staged": "^11.0.1",
     "mongodb-memory-server": "^7.4.4",
     "nodemon": "^2.0.14",
-    "pino-pretty": "^7.1.0",
     "prettier": "^2.4.1",
     "socket.io-mock": "^1.3.2",
     "ts-jest": "^27.0.7",
