--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "dependencies": {
     "@typegoose/typegoose": "^9.1.0",
     "axios": "^0.24.0",
-    "bunyan": "^1.8.15",
     "convict": "^5.2.1",
     "convict-format-with-validator": "^6.2.0",
     "http-status-codes": "^2.1.4",
@@ -30,6 +29,7 @@
     "socket.io": "^4.3.0",
     "socket.io-client": "^4.3.2",
     "ts-convict": "^1.1.0",
+    "tslog": "^3.2.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
