--- a/package.json
+++ b/package.json
@@ -17,22 +17,26 @@
   },
   "dependencies": {
     "@typegoose/typegoose": "^9.1.0",
-    "axios": "^0.24.0",
-    "convict": "^5.2.1",
+    "convict": "^6.2.1",
     "convict-format-with-validator": "^6.2.0",
     "http-status-codes": "^2.1.4",
     "inversify": "^6.0.1",
     "js-yaml": "^4.1.0",
     "module-alias": "^2.2.2",
     "mongoose": "^6.0.11",
+    "node-fetch": "^3.0.0",
     "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.4.0",
+    "rxjs-compat": "^6.6.7",
     "socket.io": "^4.3.0",
     "socket.io-client": "^4.3.2",
     "ts-convict": "^1.1.0",
     "tslog": "^3.2.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.0",
     "@trivago/prettier-plugin-sort-imports": "^2.0.4",
     "@types/axios": "^0.14.0",
     "@types/bunyan": "^1.8.7",
@@ -45,6 +49,7 @@
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "babel-jest": "^27.3.1",
     "db-migrate": "^1.0.0-beta.16",
     "db-migrate-mongodb": "^1.5.0",
     "dotenv": "^10.0.0",
