--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "js-yaml": "^4.1.0",
     "module-alias": "^2.2.2",
     "mongoose": "^6.0.11",
-    "node-fetch": "^3.0.0",
+    "node-fetch": "^2.6.6",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.4.0",
     "rxjs-compat": "^6.6.7",
@@ -46,6 +46,7 @@
     "@types/jest": "^27.0.2",
     "@types/js-yaml": "^4.0.3",
     "@types/node": "^16.11.0",
+    "@types/node-fetch": "^2.5.12",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
