--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,10 @@
       "runtimeArgs": ["--inspect-brk", "${workspaceRoot}/node_modules/.bin/jest", "--runInBand", "tests/"],
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
-      "port": 9229
+      "port": 9229,
+      "env": {
+        "BANTER_BUS_CORE_API_DATABASE_HOST": "localhost"
+      }
     },
     {
       "name": "Debug App",
@@ -31,9 +34,7 @@
       "runtimeArgs": ["run", "dev"],
       "outputCapture": "std",
       "env": {
-        "MANAGEMENT_API_URL": "http://localhost",
-        "MANAGEMENT_API_PORT": "8090",
-        "DATABASE_HOST": "localhost"
+        "BANTER_BUS_CORE_API_DATABASE_HOST": "localhost"
       }
     }
   ]
